* auth directive: fix createEmbeddedView was called when templateref was still undefined * beacon list: fix overflowing beacon tabs * build: increase style budget to 25kB

--- a/src/app/modules/trees/components/beacon-list/beacon-list.component.less
+++ b/src/app/modules/trees/components/beacon-list/beacon-list.component.less
@@ -82,6 +82,10 @@
   }
 }
 
+.list-container {
+  max-width: 100%;
+}
+
 .list-entry {
   display: flex;
   flex-direction: row;
@@ -89,6 +93,12 @@
 
   &.selected {
     background-color: @lightBgColor;
+  }
+
+  &,
+  .link {
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
